Tried to make new api route and make bot post new group doesn't work
